<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="92dp"
        android:text="@string/login_button_text"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_act_button4" />

    <TextView
        android:id="@+id/aready_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an Account?"
        app:layout_constraintBottom_toBottomOf="@+id/loginText"
        app:layout_constraintEnd_toStartOf="@+id/loginText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_act_button4"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/orange_button_background"
        android:text="@string/sign_Up_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword3" />

    <EditText
        android:id="@+id/editTextPassword3"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_box_background"
        android:ems="10"
        android:hint="@string/confirm_password_hint_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:textColorHint="@color/placeholder_font_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_box_background"
        android:ems="10"
        android:hint="@string/password_hint_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:textColorHint="@color/placeholder_font_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextEmail2"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_box_background"
        android:ems="10"
        android:hint="@string/your_email_hint_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:textColorHighlight="@color/placeholder_font_color"
        android:textColorHint="@color/placeholder_font_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_your_details_to_signup"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_text2" />

    <TextView
        android:id="@+id/sign_up_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_Up_button_text"
        android:textColor="@color/primary_font_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_box_background"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColorHint="@color/placeholder_font_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_box_background"
        android:ems="10"
        android:hint="Mobile No."
        android:inputType="phone"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail2" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_box_background"
        android:ems="10"
        android:hint="Address"
        android:inputType="textPostalAddress"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>